# extxyz

./: .cirrus.yml  .gitignore  .gitmodules  MESON_BUILD_STATUS.md  README.md  create_kv_tests.py  discover_version.py  install-unicc.sh  install-unicc.sh~  kv_tests.m  kv_tests.md  kv_tests.py  libcleri_meson.build  meson.build  meson_options.txt  pyproject.toml  readstats  requirements.in  requirements.txt  setup.py  writestats
.github/workflows/: ase-extxyz.yml  build-wheels.yml  python-package.yml
benchmarks/: bench_cleri_frames.py  bench_mad.py  bench_read.py  bench_write.py  cleri_results.csv  plot_bench.py  results.csv  scope_comment.py  verify_marshal.py  write_results.csv
examples/: create_kv_tests.py
examples/lark/json/: json_parser.py
examples/pyleri/: Makefile  main.c
examples/pyleri/basic/: Makefile  Makefile~  example.py  grammar  grammar.c  grammar.h  main.c~
examples/pyleri/extxyz/: Makefile  README_NB.md  extxyz_kv_NB.py  extxyz_kv_NB_dumptree.py  extxyz_kv_NB_grammar.py  extxyz_kv_NB_to_dict.py  extxyz_to_dict_JRK.py  parser_NB.c  strtok_atoms_lines_NB.c  tokenizer_NB.c
examples/pyleri/json/: Makefile  README_NB.md  extxyz_kv_NB.py  grammar.c  grammar.h  json  json.py  json_example.py  main.c
examples/unicc/expr/: expr  expr.c.c  expr.c.h  expr.py.py
expr/: Makefile
extxyz/: Makefile  README_NB.md  atoms_lines_tokenize_NB.c  cextxyz.py  extxyz.c  extxyz.h  extxyz.py  extxyz_kv_NB_grammar.py  extxyz_kv_grammar.c  extxyz_kv_grammar.h  extxyz_kv_grammar.py  extxyz_to_dict_JRK.py  grammar.c  grammar.h  h5atoms.py  libcleri_makefile_addition  parse_C.c  parse_headers.c  readstats  run_tests.py  single_atoms.xyz  utils.py  writestats
grammar/: extxyz_kv_grammar.py
julia/: ExtXYZ.jl
libextxyz/: Makefile  _extxyz.def  _extxyz_pyext.def  extxyz.c  extxyz.h  extxyz_dispatch.c  extxyz_dispatch.h  extxyz_kv_grammar.c  extxyz_kv_grammar.h  fast_format.c  fast_format.h  fextxyz.f90  libextxyz.dylib  main.f90  meson.build  pyext.c  test_C_main.c  test_fmt_float.c  test_fortran_main.f90
libextxyz/libextxyz.dylib.dSYM/Contents/: Info.plist
libextxyz/libextxyz.dylib.dSYM/Contents/Resources/DWARF/: libextxyz.dylib
libextxyz/libextxyz.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libextxyz.dylib.yml
python/ase-extxyz/: LICENSE  README.md  pyproject.toml
python/ase-extxyz/ase_extxyz/: __init__.py  io.py
python/ase-extxyz/tests/: conftest.py  test_ase_cases.py  test_io.py  test_kv_parsing_array_type_promotion.py  test_kv_parsing_backward_compat_old_style_array.py  test_kv_parsing_float.py
python/extxyz/: __init__.py  cextxyz.py  cli.py  core.py  extxyz.py  extxyz_kv_grammar.py  grammar.py  meson.build  utils.py
subprojects/: pcre2.wrap
tests/: append.xyz  conftest.py  not_append.xyz  run_tests.py  test_ase_cases.py  test_bench_vs_rust.py  test_core.py  test_dispatch_parity.py  test_fast_float.py  test_fast_tokenizer.py  test_formatting_failures.py  test_kv_parsing.py  test_kv_parsing_array_type_promotion.py  test_kv_parsing_backward_compat_old_style_array.py  test_kv_parsing_barestring.py  test_kv_parsing_bool.py  test_kv_parsing_float.py  test_kv_parsing_int.py  test_kv_parsing_key.py  test_kv_parsing_string.py  test_marshal_parity.py  test_robustness.py  test_single_quote.py  test_string_buffer.py  test_traj_writer.py  test_write_buffer.py  test_write_float_format.py  test_write_precision.py
tools/: assert_c_read_path.py
tools/wheels/: build_pcre2_macos.sh  release-wheels.sh
unicc_example_expr/: Makefile
