[build-system]
requires = ["meson>=1.0.0", "meson-python>=0.13.0", "ninja", "pyleri>=1.3.3"]
build-backend = "mesonpy"

[project]
name = "extxyz"
description = "Extended XYZ file format tools"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "James Kermode", email = "james.kermode@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
    "Programming Language :: Fortran",
]
requires-python = ">=3.10"
dynamic = [ "version" ]
dependencies = [
    "numpy>=1.13.0",
    "pyleri>=1.3.3",
]

[project.optional-dependencies]
test = [
    "pytest",

]

[project.scripts]
extxyz = "extxyz.cli:main"

[project.urls]
documentation = "http://libatoms.github.io/extxyz/"
repository = "https://github.com/libAtoms/extxyz"

[tool.meson-python]
# wheel.exclude is matched against paths under Meson's install locations
# ({bindir}, {libdir_shared}, ...). Patterns:
#   - "**/*.lib": phantom MSVC import library that Meson lists in the
#     install plan but python.extension_module() never actually creates;
#     without this meson-python errors with FileNotFoundError on Windows.
#   - "**/extxyz.dll", "**/libextxyz.*": the standalone libextxyz shared
#     library is for non-Python C consumers — it's installed by
#     `meson install` for that audience but does not belong in the wheel.
#     On Windows, leaving it in trips meson-python's
#     "tool.meson-python.allow-windows-internal-shared-libs" check.
wheel.exclude = [
    "**/*.lib",
    "**/extxyz.dll",
    "**/libextxyz.*",
]

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest -v {package}/tests"

[tool.cibuildwheel.linux]
before-all = "which yum && yum install -y pcre2-devel zlib-devel"

[tool.cibuildwheel.macos]
# Build a static PCRE2 from source at MACOSX_DEPLOYMENT_TARGET rather than using the
# Homebrew bottle (which is compiled for the runner's newest macOS and would make the
# wheel fail to load on older macOS). meson links it into _extxyz.so via PKG_CONFIG_PATH.
before-all = "bash {project}/tools/wheels/build_pcre2_macos.sh"

[tool.cibuildwheel.macos.environment]
# 11.0 (Big Sur) is the oldest macOS that runs on arm64; build for it so wheels install
# on all supported macOS. Keep in sync with tools/wheels/build_pcre2_macos.sh.
MACOSX_DEPLOYMENT_TARGET = "11.0"
PKG_CONFIG_PATH = "/tmp/pcre2/lib/pkgconfig"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows.environment]
CMAKE_PREFIX_PATH = "C:/vcpkg/installed/x64-windows"
PKG_CONFIG_PATH = "C:/vcpkg/installed/x64-windows/lib/pkgconfig"
PCRE2_ROOT = "C:/vcpkg/installed/x64-windows"
LIB = "C:/vcpkg/installed/x64-windows/lib"
INCLUDE = "C:/vcpkg/installed/x64-windows/include"
PATH = "C:/vcpkg/installed/x64-windows/bin;C:/Program Files/Git/bin;C:/Windows/System32;C:/Windows;$PATH"
